# CliProcster

./: .gitignore  CMakeLists.txt  CliProcster.sln  CliProcster.vcxproj  CliProcster.vcxproj.filters  README.md  alert_rules.example.json  alert_rules.example.toml  alert_rules.example.txt  alert_rules.example.yaml  main.cpp
src/: app.inc  core_types.inc  integrations.inc  observability_backends.cpp  observability_backends.hpp  process_collectors.inc  tui.inc
